* https://github.com/clj-commons/etaoin/issues/355[#355]: Add support for W3C WebDriver print to PDF feature
* https://github.com/clj-commons/etaoin/issues/466[#466]: WebDriver process output can now also be directed to console
* https://github.com/clj-commons/etaoin/issues/453[#453]: The `etaoin.api/with-<browser>` macros no longer require `opts` to be specified.
This makes the advantage of newer `etaoin.api2/with-<browser>` macros maybe less obvious.
That said, for Etaoin users who have adopted and prefer the api2 versions, they are still there, but no longer documented in the user guide.
* https://github.com/clj-commons/etaoin/issues/383[#383]: Drop testing for Safari on Windows, Apple no longer releases Safari for Windows
* https://github.com/clj-commons/etaoin/issues/388[#388]: Drop testing for PhantomJS, development has long ago stopped for PhantomJS
* https://github.com/clj-commons/etaoin/issues/387[#387]: No longer testing multiple key modifiers for a single webdriver send keys request
* https://github.com/clj-commons/etaoin/issues/384[#384]: Look for `safaridriver` on PATH by default
* https://github.com/clj-commons/etaoin/issues/402[#402]: Only send body for webdriver `POST` requests to appease `safaridriver`
* https://github.com/clj-commons/etaoin/issues/403[#403]: The `select` fn now clicks on the `select` element before clicking the `option` element to appease `safaridriver`
* https://github.com/clj-commons/etaoin/issues/408[#408]: Fix `switch-window` for `msedgedriver`
* https://github.com/clj-commons/etaoin/issues/432[#432]: Switched from `project.clj` to `deps.edn`.
This will allow for easier testing of unreleased versions of Etaoin via git deps.
It also unconvered that our minimum Clojure version was 1.10, instead of the advertised v1.9.
Fixed.
* https://github.com/clj-commons/etaoin/issues/444[#444]: Visibility checks fixed for firefox and chrome (thanks https://github.com/daveyarwood[@daveyarwood]!)